examples/test/testpolicy9098.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9098
  namespace: namespace319
spec:
  podSelector:
    matchLabels:
      key19: value40
      key21: value24
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value41
          key7: value0
          key4: value11
      podSelector:
        matchLabels:
          key7: value37
          key30: value48
          key47: value18
